...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Editable Title at Center of Toolbar -->
    <TextView
        android:id="@+id/event_detail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_title"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/black"
...
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="20dp">

                <!-- DELETE button -->
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/delete_button"
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/rounded_background"
                    android:clickable="true"
                    android:text="DELETE"
                    android:textColor="@color/black" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/edit_button"
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/rounded_background"
...
