<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/home"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundGreen">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/home_toolbar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/toolbar_background"
        android:foregroundTint="#4CAF50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Centered Title -->
    <TextView
        android:id="@+id/header_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Moodgram"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/home_toolbar"
        app:layout_constraintBottom_toBottomOf="@id/home_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <!-- Profile Picture Container -->
    <androidx.cardview.widget.CardView
        android:id="@+id/profile_image"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="12dp"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="70dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/home_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_toolbar"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/profile_image_png"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/content_desc_profile_image"
            android:scaleType="centerCrop"
            android:src="@drawable/profile_icon" />
    </androidx.cardview.widget.CardView>

    <!-- Notification Icon -->
    <ImageButton
        android:id="@+id/notification_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="Notifications"
        android:scaleType="fitCenter"
        android:src="@drawable/notfication_icon_default"
        app:layout_constraintBottom_toBottomOf="@id/home_toolbar"
        app:layout_constraintTop_toTopOf="@id/home_toolbar"
        app:layout_constraintEnd_toStartOf="@id/profile_image"/>


    <!-- Menu Button -->
    <ImageButton
        android:id="@+id/menu_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="Menu"
        android:focusable="true"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@id/home_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/home_toolbar"
        android:src="@drawable/filter_icon" />

    <Spinner
        android:id="@+id/filter_spinner"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/header_title"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/menu_button"
        app:layout_constraintTop_toBottomOf="@+id/menu_button" />


    <!-- Category Tabs -->

    <LinearLayout
        android:id="@+id/category_tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/home_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tab_explore"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:clickable="true"
            android:focusable="true"
            android:minHeight="48dp"
            android:padding="12dp"
            android:text="EXPLORE"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tab_followed"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:clickable="true"
            android:focusable="true"
            android:minHeight="48dp"
            android:padding="12dp"
            android:text="FOLLOWED"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tab_myposts"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:clickable="true"
            android:focusable="true"
            android:minHeight="48dp"
            android:padding="12dp"
            android:text="MYPOSTS"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tab_map"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:clickable="true"
            android:focusable="true"
            android:minHeight="48dp"
            android:padding="12dp"
            android:text="MOOD MAP"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>


    <!-- Scrollable Event List -->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/addButton"
        app:layout_constraintTop_toBottomOf="@id/category_tabs"
        tools:layout_editor_absoluteX="125dp" />

    <ImageButton
        android:id="@+id/addButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/rounded_background"
        android:contentDescription="TODO"
        android:elevation="8dp"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recycler_view" /> 
</androidx.constraintlayout.widget.ConstraintLayout>
